--- a/index.html
+++ b/index.html
@@ -1230,67 +1230,53 @@ input[type="search"]::-webkit-search-cancel-button {
   background: #f5f5f5;
 }
 
-/* CONTAINER DAS SUGESTÕES */
-#sugestoesMaisVendidos {
+.sugestoes-carrinho {
   margin-top: 20px;
-  padding: 10px;
-  background: #fff8e1;
-  border-radius: 10px;
-  width: 100%;
-  overflow: hidden;
 }
 
-/* LINHA HORIZONTAL (lado a lado + arrastar) */
 .sugestoes-linha {
   display: flex;
-  flex-wrap: nowrap;       /* 🔥 nunca quebra linha */
-  gap: 16px;
-  overflow-x: auto;        /* 🔥 barra lateral */
-  padding: 10px 0;
+  gap: 14px;
+  overflow-x: auto;          /* rolagem lateral no celular */
+  padding-bottom: 10px;
 }
 
-/* CARD DO PRODUTO */
 .sugestao-card {
-  flex: 0 0 240px;         /* 🔥 largura fixa */
-  max-width: 240px;
+  min-width: 180px;
   background: #fff;
-  border-radius: 16px;
-  padding: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+  border-radius: 12px;
+  padding: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
   text-align: center;
+  flex-shrink: 0;
 }
 
-/* IMAGEM OCUPA TODA A ÁREA BRANCA */
 .sugestao-card img {
   width: 100%;
-  height: 180px;
-  object-fit: cover;       /* 🔥 igual aos produtos do site */
-  border-radius: 12px;
-  margin-bottom: 8px;
-  display: block;
+  max-height: 120px;
+  object-fit: contain;
+  border-radius: 8px;
 }
 
-/* TÍTULO */
 .sugestao-card h4 {
+  font-size: 14px;
   margin: 8px 0;
-  color: #0b5cff;
 }
 
-/* LINHA TAMANHO + BOTÃO */
 .sugestao-card .linha {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 13px;
   margin-top: 6px;
 }
 
-/* BOTÃO */
 .sugestao-card button {
-  background: #22c55e;
+  background: #2ecc71;
   color: #fff;
   border: none;
-  padding: 6px 10px;
-  border-radius: 8px;
+  padding: 4px 8px;
+  border-radius: 6px;
   cursor: pointer;
 }
 
@@ -5455,7 +5441,7 @@ function addProduto(id, nome, preco, imagem = "", tamanhos = [], tamanhoSelecion
   } else {
     carrinho.push({ 
       id, 
-      nome: nome + (tamanhoSelecionado ? " " + tamanhoSelecionado : ""),
+     nome: nome,
       preco, 
       qtd: 1,
       imagem,
@@ -5710,10 +5696,9 @@ async function confirmarPedido() {
 🛒 *Itens do pedido:*
 `;
 
- carrinho.forEach(p => {
-    const tamanho = p.tamanhos && p.tamanhos.length > 0 ? " " + (p.tamanhoSelecionado || "") : "";
-    const subtotal = p.preco * p.qtd;
-    msg += `• ${p.nome}${tamanho} — ${p.qtd}x (R$ ${subtotal.toFixed(2)})\n`;
+carrinho.forEach(p => {
+  const subtotal = p.preco * p.qtd;
+  msg += `• ${p.nome} — ${p.qtd}x (R$ ${subtotal.toFixed(2)})\n`;
 });
 
   msg += `
