--- a/index.html
+++ b/index.html
@@ -1326,6 +1326,24 @@ input[type="search"]::-webkit-search-cancel-button {
   background: #cc0000;
 }
 
+  .produtos-box {
+  background: #f8f9fa;
+  padding: 12px;
+  border-radius: 8px;
+  margin: 10px 0;
+}
+
+.item-pedido {
+  font-size: 14px;
+}
+
+.total-geral {
+  font-size: 16px;
+  font-weight: bold;
+  color: #2e7d32;
+  margin-top: 10px;
+}
+
 </style>
 </head>
 
@@ -6161,9 +6179,26 @@ function esconderPainelAdmin() {
       snapshot.forEach(doc => {
         const p = doc.data();
 
+        let produtosHTML = "";
+
+        if (p.itens && p.itens.length > 0) {
+          p.itens.forEach(item => {
+            produtosHTML += `
+              <div class="item-pedido">
+                <strong>${item.nome}</strong><br>
+                Tamanho: ${item.tamanhoSelecionado || "-"} <br>
+                Quantidade: ${item.qtd} <br>
+                Preço Unitário: R$ ${item.preco.toFixed(2)} <br>
+                Subtotal: R$ ${(item.qtd * item.preco).toFixed(2)}
+              </div>
+              <hr>
+            `;
+          });
+        }
+
         painel.innerHTML += `
           <div class="card-pedido-admin">
-            
+
             <button class="btn-excluir-pedido"
               onclick="removerPedidoAdmin('${doc.id}')">
               ✖
@@ -6172,7 +6207,16 @@ function esconderPainelAdmin() {
             <h3>Pedido Nº ${p.numero}</h3>
 
             <p><strong>Cliente:</strong> ${p.cliente}</p>
-            <p><strong>Total:</strong> R$ ${(p.total || 0).toFixed(2)}</p>
+            <p><strong>Endereço:</strong> ${p.endereco || "-"}</p>
+
+            <div class="produtos-box">
+              ${produtosHTML}
+            </div>
+
+            <p class="total-geral">
+              Total Geral: R$ ${(p.total || 0).toFixed(2)}
+            </p>
+
             <p><strong>Status:</strong> ${p.status}</p>
 
           </div>
