--- a/index.html
+++ b/index.html
@@ -4037,15 +4037,15 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Papel Toalha</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 18,00</span>
+      <span>R$ 17,00</span>
       <button onclick="addProduto(
-        'papel-toalha','Papel Toalha',18,'img/papel-toalha.jpg',
-        [{tamanho:'Unid.', preco:18}],'Unid.')">Adicionar</button>
+        'papel-toalha','Papel Toalha',17,'img/papel-toalha.jpg',
+        [{tamanho:'Unid.', preco:17}],'Unid.')">Adicionar</button>
     </div>
   </div>
 </div>
 
-  <div class="produto limpeza"
+  <div class="produto casa"
      data-nomes="papel toalha 1000 folhas, papel toalha, toalha papel, papel institucional">
 
   <img src="img/papel-toalha-1000.jpg" alt="Papel Toalha 1000 Folhas">
@@ -4154,7 +4154,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
           { tamanho: 'Evita Cheiro de Mofo', preco: 4 }
         ],
         'Evita Cheiro de Mofo'
-      ">Adicionar</button>
+      )">Adicionar</button>
     </div>
   </div>
 </div>
@@ -4178,7 +4178,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
           { tamanho: 'Evita Mofo', preco: 10 }
         ],
         'Evita Mofo'
-      ">Adicionar</button>
+      )">Adicionar</button>
     </div>
   </div>
 </div>
@@ -4300,6 +4300,21 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
     </div>
   </div>
 </div>
+
+<div class="produto casa" data-nomes="porta sabonete liquido, sabonete, sabonete liquido, suporte sabonete liquido, banheiro">
+  <img src="img/porta-sabonete.jpg" alt="Porta Sabonete Liquido">
+  <span class="icone-busca">🔍</span>
+  <h3>Porta Sabonete Liquido</h3>
+  <p class="estoque" id="estoque-porta-sabonete">📦 Estoque: 3</p>
+  <div class="variacoes">
+    <div class="linha">
+      <span>R$ 15,00</span>
+      <button onclick="addProduto(
+        'porta-sabonete','Porta Sabonete Liquido',15,'img/porta-sabonete.jpg',
+        [{tamanho:'Unid.', preco:15}],'Unid.')">Adicionar</button>
+    </div>
+  </div>
+</div>
     
 <!-- Timer Egg -->
 <div class="produto casa" data-nomes="timer egg, timer cozinha, temporizador">
@@ -4309,7 +4324,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-timer-egg">📦 Estoque: 10</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 15,00</span>
+      <span>R$ 15,00</span>
       <button onclick="addProduto(
         'timer-egg','Timer Egg',15,'img/timer-egg.jpg',
         [{tamanho:'Unid.', preco:15}],'Unid.')">Adicionar</button>
@@ -4325,7 +4340,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-chuveiro-torneira">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 13,00</span>
+      <span>R$ 13,00</span>
       <button onclick="addProduto(
         'chuveiro-torneira','Chuveiro para Torneira',13,'img/chuveiro-torneira.jpg',
         [{tamanho:'Unid.', preco:13}],'Unid.')">Adicionar</button>
@@ -4341,7 +4356,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-frigideira-antiaderente">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 55,00</span>
+      <span>R$ 55,00</span>
       <button onclick="addProduto(
         'frigideira-antiaderente','Frigideira Antiaderente',55,'img/panela-antiaderente.jpg',
         [{tamanho:'Unid.', preco:55}],'Unid.')">Adicionar</button>
@@ -4357,7 +4372,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-porta-tempero-9pcs">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 50,00</span>
+      <span>R$ 50,00</span>
       <button onclick="addProduto(
         'porta-tempero-9pcs','Porta Tempero 9 Peças',50,'img/porta-tempero.jpg',
         [{tamanho:'Unid.', preco:50}],'Unid.')">Adicionar</button>
@@ -4373,7 +4388,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-chaleira">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 90,00</span>
+      <span>R$ 90,00</span>
       <button onclick="addProduto(
         'chaleira','Chaleira',90,'img/chaleira.jpg',
         [{tamanho:'Unid.', preco:90}],'Unid.')">Adicionar</button>
@@ -4659,6 +4674,38 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   </div>
 </div>
 
+<div class="produto limpeza"
+     data-nomes="mop, esfregão, rodo mop, mop giratório, mop limpeza, mop com balde, esfregao giratorio">
+  <img src="img/mop.jpg" alt="Mop Giratorio">
+  <span class="icone-busca">🔍</span>
+  <h3>Mop Giratorio</h3>
+  <p class="estoque" id="estoque-mop-giratorio">📦 Estoque: 2</p>
+  <div class="variacoes">
+    <div class="linha">
+      <span>R$ 75,00</span>
+      <button onclick="addProduto(
+        'mop-giratorio','Mop Giratorio',75,'img/mop.jpg',
+        [{tamanho:'Unid.', preco:75}],'Unid.')">Adicionar</button>
+    </div>
+  </div>
+</div>
+
+<div class="produto casa"
+     data-nomes="carrinho multiuso, carrinho organizador, carrinho com rodinhas, organizador multiuso, organizador banheiro, organizador cozinha">
+  <img src="img/carrinho-multiuso.jpg" alt="Carrinho Multiuso">
+  <span class="icone-busca">🔍</span>
+  <h3>Carrinho Multiuso</h3>
+  <p class="estoque" id="estoque-carrinho-multiuso">📦 Estoque: 2</p>
+  <div class="variacoes">
+    <div class="linha">
+      <span>R$ 90,00</span>
+      <button onclick="addProduto(
+        'carrinho-multiuso','Carrinho Multiuso',90,'img/carrinho-mmultiuso.jpg',
+        [{tamanho:'Unid.', preco:90}],'Unid.')">Adicionar</button>
+    </div>
+  </div>
+</div>
+    
 <!-- Mangueira de Silicone -->
 <div class="produto casa" data-nomes="mangueira silicone, mangueira agua, limpeza">
   <img src="img/mangueira.jpg" alt="Mangueira de Silicone">
@@ -4703,6 +4750,8 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/balde.jpg" alt="Baldes">
   <span class="icone-busca">🔍</span>
   <h3>Baldes</h3>
+   <p class="estoque" id="estoque-balde-8l">📦 Estoque: 2</p>
+   <p class="estoque" id="estoque-balde-10l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span>8L — R$ 10,00</span>
@@ -4724,6 +4773,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/cesto-60.jpg" alt="Cesto de Roupa 60 LTS">
   <span class="icone-busca">🔍</span>
   <h3>Cesto de Roupa 60 LTS</h3>
+   <p class="estoque" id="estoque-cesto-60l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span> — R$ 40,00</span>
@@ -4739,6 +4789,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/cesto-fechado.jpg" alt="Cesto de Roupa Fechado 65 LTS">
   <span class="icone-busca">🔍</span>
   <h3>Cesto de Roupa Fechado 65 LTS</h3>
+   <p class="estoque" id="estoque-cesto-fechado-65l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span> — R$ 65,00</span>
@@ -4754,6 +4805,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/lixeira-9.jpg" alt="Lixeira 9 LTS">
   <span class="icone-busca">🔍</span>
   <h3>Lixeira 9 LTS</h3>
+   <p class="estoque" id="estoque-lixeira-9l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span> — R$ 30,00</span>
@@ -4769,6 +4821,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/lixeira-suporte.jpg" alt="Lixeira com Suporte para Pendurar">
   <span class="icone-busca">🔍</span>
   <h3>Lixeira com Suporte para Pendurar</h3>
+   <p class="estoque" id="estoque-lixeira-suporte">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span> — R$ 40,00</span>
@@ -4784,6 +4837,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/lixeira-12.jpg" alt="Lixeira 12 LTS">
   <span class="icone-busca">🔍</span>
   <h3>Lixeira 12 LTS</h3>
+   <p class="estoque" id="estoque-lixeira-12l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span> — R$ 30,00</span>
@@ -4817,7 +4871,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   </div>
 </div>
 
-<div class="produto limpeza"
+<div class="produto banheiro"
      data-nomes="papel higienico 8 rolos, papel higiênico institucional, papel banheiro, institucional">
 
   <img src="img/papel-higienico-8.jpg" alt="Papel Higiênico Institucional 8 Rolos-">
@@ -4836,7 +4890,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
           { tamanho: 'Papel Higiênico 8 Rolos', preco: 45 },
         ],
         'Papel Higiênico 8 Rolos'
-      ">Adicionar</button>
+      )">Adicionar</button>
     </div>
   </div>
 </div>
@@ -4877,7 +4931,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   </div>
 </div>
 
-   <div class="produto limpeza"
+   <div class="produto banheiro"
      data-nomes="pastilha 3 unidades frescor, pastilha sanitária, vaso sanitario, banheiro">
 
   <img src="img/pastilha.jpg" alt="Pastilha Frescor 3 Unid.">
@@ -4976,7 +5030,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   </div>
 </div>
 
-<div class="produto limpeza"
+<div class="produto banheiro"
      data-nomes="naftalina, bolinha anti mofo, guarda roupa, armario, anti inseto">
 
   <img src="img/naftalina.jpg" alt="Naftalina Frescor">
@@ -4995,7 +5049,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
           { tamanho: 'Naftalina', preco: 4 }
         ],
         'Naftalina'
-      ">Adicionar</button>
+      )">Adicionar</button>
     </div>
   </div>
 </div>
